--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     </body>
 
     <script>
+
+
+
     if(window.DeviceOrientationEvent) {
         window.addEventListener("deviceorientation", function(event){    
             var alpha = event.alpha;
             var beta = event.beta;
             var gamma = event.gamma;
+            var time = Date.now();
             document.getElementById("orientation").innerHTML = "<ul><li>Alpha : " + alpha + "</li><li>Beta : " + beta + "</li><li>Gamma : " + gamma + "</li></ul>"; 
+            console.log(time);
         }, false);
     }
 
