--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>device orientation/device motion</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="jquery-ui.min.js"></script>
     </head>
 
     <body>
@@ -10,28 +12,28 @@
     </body>
 
     <script>
+    $(document).ready(function(){       
+        if(window.DeviceOrientationEvent) {
+            window.addEventListener("deviceorientation", function(event){    
+                var alpha = event.alpha;
+                var beta = event.beta;
+                var gamma = event.gamma;
+                var time = Date.now();
+                $("#orientation").html("<ul><li>Alpha : " + alpha + "</li><li>Beta : " + beta + "</li><li>Gamma : " + gamma + "</li></ul>"); 
+                console.log(time);
+            }, false);
+        }
 
-
-
-    if(window.DeviceOrientationEvent) {
-        window.addEventListener("deviceorientation", function(event){    
-            var alpha = event.alpha;
-            var beta = event.beta;
-            var gamma = event.gamma;
-            var time = Date.now();
-            document.getElementById("orientation").innerHTML = "<ul><li>Alpha : " + alpha + "</li><li>Beta : " + beta + "</li><li>Gamma : " + gamma + "</li></ul>"; 
-            console.log(time);
-        }, false);
-    }
-
-    if(window.DeviceMotionEvent) {
-        window.addEventListener("devicemotion", function(event){
-            var x = event.accelerationIncludingGravity.x;
-            var y = event.accelerationIncludingGravity.y;
-            var z = event.accelerationIncludingGravity.z;
-            document.getElementById("motion").innerHTML = "<ul><li>X : " + x + "</li><li>Y : " + y + "</li><li>Z : " + z + "</li></ul>"; 
-        }, false);
-    }
-
+        if(window.DeviceMotionEvent) {
+            window.addEventListener("devicemotion", function(event){
+                var x = event.accelerationIncludingGravity.x;
+                var y = event.accelerationIncludingGravity.y;
+                var z = event.accelerationIncludingGravity.z;
+                var time = Date.now();
+                $("#motion").html("<ul><li>X : " + x + "</li><li>Y : " + y + "</li><li>Z : " + z + "</li></ul>"); 
+            }, false);
+        }
+   
+})
     </script>
 </html> 
